resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomers-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
      - tomer-mtg
    secretName: tomer-mtg-selfsigned
  rules:
    - host: tomer-mtg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mtg-service
                port:
                  number: 80
